
v6.22
(xx/03/19)

Changes / Improvements / Optimisations:
- Security | The DietPi-Software global password is now stored with enhanced security which also resolves a warning on Buster systems: https://github.com/MichaIng/DietPi/issues/2213
- General | DietPi scripts now use the lightweight standalone "7zr" command to handle 7z archives. This allows us to lower DietPi core package dependencies from "p7zip-full" to "p7zip".
- General | CPU temps (if available on the device) now displayed in the login banners. Many thanks to esturniolo for the suggestion: https://twitter.com/esturniolo/status/1104912062298423297
- RPi | DietPi does not set or change "framebuffer_depth" in config.txt anymore which defaults to 16 which works in every known case. It will be re-added as fast as we find a case where another value is required.
- DietPi-NordVPN | Added sent/received usage stats for VPN tunnel.
- DietPi-Sync | Sync will now abort if the source dir is empty. Merged dry run into real sync, as this was performed anyway to do required free space check. When "Sync" is selected, after dry run the user is presented a summary and given the option to view the detailed dry run log, cancel or continue with real sync. Some other minor fixes and enhancements have been applied as well. Many thanks to @midnightwatcher for doing this request: https://dietpi.com/phpbb/viewtopic.php?f=12&t=5588
- DietPi-Software | Emby Server: Now installs the latest version automatically (currently 4.0.2) which as well offers a native ARMv8 package: https://github.com/MichaIng/DietPi/pull/2525
- DietPi-Software | WireGuard: Switched from 10.8.0.0 to 10.9.0.0 IP addresses on fresh installs to avoid doubled IP range use with OpenVPN. Many thanks to @XRay437 for pointing this out: https://github.com/MichaIng/DietPi/issues/2491#issuecomment-461366739