@@ -9,8 +9,8 @@
 	#////////////////////////////////////
 	#
 	# Info:
-	# - filename /DietPi/dietpi/dietpi-login
-	# - activates on login /etc/bashrc.d/dietpi-login.sh
+	# - Filename: /DietPi/dietpi/dietpi-login
+	# - Called in interactive bash shells from: /etc/bashrc.d/dietpi.bash
 	#////////////////////////////////////
 
 	# Import DietPi-Globals --------------------------------------------------------------
@@ -37,12 +37,8 @@
 	# Autoboot
 	Run_AutoStart(){
 
-		# - Do we have a valid screen for autoboot?
-		local screen_valid=0
-		[[ ! $DISPLAY && $(tty) == '/dev/tty1' ]] && screen_valid=1
-
-		# - Boot to specific program
-		if (( $screen_valid )); then
+		# - Boot into specific program if we have a valid screen
+		if [[ ! $DISPLAY && $(tty) == '/dev/tty1' ]]; then
 
 			# - Kodi
 			if (( $auto_start_index == 1 )); then
