@@ -1553,8 +1553,10 @@ Also have a look at "Sonarr", another alternative TV show manager, available for
 
 			#-------------------------------------------------------------------------------
 			#Redo our /etc/bash.bashrc entry, user confirmed 4 entries: https://github.com/MichaIng/DietPi/issues/2529
+			#As well allow ".bash" file ending and remove obsolete dietpi-*.sh scripts: https://github.com/MichaIng/DietPi/pull/2636
 			sed -i '\#for i in /etc/bashrc#d' /etc/bash.bashrc
-			G_CONFIG_INJECT '.*/etc/bashrc\.d/.*' 'for i in /etc/bashrc.d/*.sh; do [ -r "$i" ] && . $i; done' /etc/bash.bashrc
+			G_CONFIG_INJECT '.*/etc/bashrc\.d/.*' 'for i in /etc/bashrc.d/*.sh /etc/bashrc.d/*.bash; do [ -r "$i" ] && . $i; done' /etc/bash.bashrc
+			rm -f /etc/bashrc.d/dietpi-*.sh
 			#-------------------------------------------------------------------------------
 			#Mopidy fix: https://github.com/MichaIng/DietPi/issues/2536
 			getent passwd mopidy &> /dev/null && usermod -a -G dietpi,audio -d $G_FP_DIETPI_USERDATA/mopidy mopidy
