@@ -1,7 +1,0 @@
-#!/bin/bash
-
-# dietpi-* and G_* functions and variables
-. /DietPi/dietpi/func/dietpi-globals
-
-# login scripts and banner
-/DietPi/dietpi/dietpi-login
