@@ -4,6 +4,7 @@ v6.22
 
 Changes / Improvements / Optimisations:
 - Security | The DietPi-Software global password is now stored with enhanced security which also resolves a warning on Buster systems: https://github.com/MichaIng/DietPi/issues/2213
+- System | /etc/bashrc.d/ now allows ".bash" file ending as well. Merged all contained DietPi scripts into one: /etc/bashrc.d/dietpi.bash. https://github.com/MichaIng/DietPi/pull/2636
 - General | DietPi scripts now use the lightweight standalone "7zr" command to handle 7z archives. This allows us to lower DietPi core package dependencies from "p7zip-full" to "p7zip".
 - General | CPU temps (if available on the device) now displayed in the login banners. Many thanks to esturniolo for the suggestion: https://twitter.com/esturniolo/status/1104912062298423297
 - RPi | DietPi does not set or change "framebuffer_depth" in config.txt anymore which defaults to 16 which works in every known case. It will be re-added as fast as we find a case where another value is required.
